update the notebook

--- a/example_training_run.ipynb
+++ b/example_training_run.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "#!pip uninstall jax\n",
-    "#pip install jax==0.1.76\n",
+    "!pip uninstall jax\n",
+    "pip install jax==0.1.76\n",
     "!python driver.py --init_FF Datasets/cobalt/ffield_edu \\\n",
     "                    --params Datasets/cobalt/params \\\n",
     "                    --geo Datasets/cobalt/geo \\\n",
